@@ -876,6 +876,9 @@ Release 0.19.0 - Unreleased
     HADOOP-4018. The number of tasks for a single job cannot exceed a 
     pre-configured maximum value. (dhruba)
 
+    HADOOP-4288. Fixes a NPE problem in CapacityScheduler. 
+   (Amar Kamat via ddas)
+
 Release 0.18.2 - Unreleased
 
   BUG FIXES
